<resources>
    <string name="app_name">BudgetTracker - WhereisMyMoney</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radioButtonIncome">Income</string>
    <string name="radioButtonExpense">Expense</string>
    <string name="radioButtonMoneybox">Moneybox</string>
    <string name="chipSalary">Salary</string>
    <string name="chipInvestment">Investment</string>
    <string name="chipBonus">Bonus</string>
    <string name="chipAllowance">Allowance</string>
    <string name="editTextAmountHint">Amount</string>
    <string name="chipFood">Food</string>
    <string name="chipSelfDevelopment">Self Development</string>
    <string name="chipBill">Bill</string>
    <string name="chipShopping">Shopping</string>
    <string name="chipEntertainment">Entertainment</string>
    <string name="chipHoliday">Holiday</string>
    <string name="chipHealth">Health</string>
    <string name="chipTransportationFee">Transportation Fee</string>
    <string name="chipKids">Kids</string>
    <string name="chipOther">Other</string>
    <string name="buttonSave">Save</string>
    <string name="editTextDescriptionHint">Description</string>
    <string name="savedNewTransaction">The transaction was successfully saved !</string>
    <string name="deleteTransaction">Are you sure you want to delete the transaction?</string>
    <string name="yes">YES</string>
    <string name="fillRequiredFields">Please fill all required fields !</string>
    <string name="currentStatus">Current Status</string>
    <string name="moneyboxTab">MONEYBOX</string>
    <string name="transactionsTab">TRANSACTIONS</string>
    <string name="moneyboxName">Moneybox Name:</string>
    <string name="moneyboxAmount">Moneybox Amount:</string>
    <string name="collectedAmount">Collected Amount:</string>
    <string name="moneyboxNewPrice">Add New Amount</string>
    <string name="buttonAdd">Add</string>
    <string name="deficientAmount">Deficient Amount</string>
    <string name="intheMoneybox">In the Moneybox</string>
    <string name="addedNewAmount">The specified amount has been added to Moneybox !</string>
    <string name="savedNewMoneybox">New moneybox created !</string>
    <string name="reminderTitle">Title</string>
    <string name="reminderMessage">Message</string>
    <string name="buttonSchedule">SCHEDULE NOTIFICATION</string>
    <string name="allTransactions">All Transactions</string>
    <string name="yearlyTransactions">Yearly</string>
    <string name="monthlyTransactions">Monthly</string>
</resources>