<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="allTransactionsAdapter"
            type="com.amttech.budgettracker_whereismymoney.ui.adapter.AllTransactionsAdapter" />
        <variable
            name="allTransactionsFragment"
            type="com.amttech.budgettracker_whereismymoney.ui.fragment.AllTransactionsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AllTransactionsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAllTransactions"
            app:title=" "
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllTransactions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{allTransactionsAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTime"
            app:reverseLayout="true"
            app:stackFromEnd="true" />

        <RadioGroup
            android:id="@+id/radioGroupTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAllTransactions">

            <RadioButton
                android:id="@+id/radioButtonAllTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> allTransactionsFragment.observeAllTransactions()}"
                android:text="@string/allTransactions" />

            <RadioButton
                android:id="@+id/radioButtonYearlyTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> allTransactionsFragment.observeYearlyTransactions()}"
                android:text="@string/yearlyTransactions" />

            <RadioButton
                android:id="@+id/radioButtonMonthlyTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> allTransactionsFragment.observeMonthlyTransactions()}"
                android:text="@string/monthlyTransactions" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>